--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,14 @@
-rootProject.name = 'benchmarks'
+rootProject.name = 'hql-benchmark'
 
-include 'orm5'
-include 'orm6'
-include 'processor'
+include 'hql-benchmark-common'
+include 'hql-benchmark-orm5'
+include 'hql-benchmark-orm6'
 
+
+rootProject.children.each { project ->
+	project.buildFileName = "${project.name}.gradle"
+	assert project.projectDir.isDirectory()
+	assert project.buildFile.exists()
+	assert project.buildFile.isFile()
+}
 
